--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
 }
 
 #title {
@@ -26,8 +27,9 @@
     display:block;
     margin: auto;
     padding-top: 25px;
-    max-width: auto;
-    max-height: 500px;
+    max-width: 100%;
+    max-height: auto;
+    
 }
 
 #tribute-info {
